[tool.poetry]
name = "toolkit"
version = "0.1.0"
description = "A collection of frequently used tools"
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.2"
astropy = "^5.2.1"
spectral-cube = "^0.6.0"
radio-beam = "^0.3.4"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
configparseradv = {path = "../configparseradv"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
