[tool.poetry]
name = "toolkit"
version = "0.2.0"
description = "A collection of frequently used tools"
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.3"
astropy = "^6.0.0"
spectral-cube = "^0.6.5"
radio-beam = "^0.3.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
#configparseradv = {path = "../configparseradv"}
configparseradv = {git = "https://github.com/folguinch/configparseradv.git"}
shapely = "^2.0.1"
regions = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
